--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <style>
     body {
-        font-family: 'Tajawal', TS Safaa Medium;
+        font-family: TS Safaa Medium;
         background: #ffffff;
         margin: 0;
         padding: 0;
@@ -100,7 +100,7 @@
 
 <div id="card">
 اضغط الزر بالأسفل وابدأ المرح…  
-قد تربح **جائزة** 🎁  
+قد تربح **هدية** 🎁  
 أو تعرف **معلومة دولية** 🌍  
 </div>
 
@@ -194,7 +194,7 @@ function showQuiz() {
 function checkAnswer(choice) {
     if (choice === currentQuestion.answer) {
         document.getElementById("card").innerHTML =
-            `<p>🎉 إجابة صحيحة! مبروووك ربحت جائزة مميزة! 🎁</p>`;
+            `<p>🎉 إجابة صحيحة!هل تبقى هدايا؟؟  انت تستحق هدية! 🎁</p>`;
         confetti();
     } else {
         document.getElementById("card").innerHTML +=
@@ -205,3 +205,4 @@ function checkAnswer(choice) {
 
 </body>
 </html>
+
